# ecradoff

./: .gitignore  .gitmodules  Makefile  README.md  introduction.ipynb  pyproject.toml  setup.py
namelists/: config_flotsam_template.nam
src/aerodefs/: bucket.py  data.py  optics.py  sizedistrib.py
src/ecrad/: packer.py
src/interp/: grids.py  interface.py  verticals.py  wrapper.py
src/libs/: getlutval.f90  interp2d.f90  interplut.f90  interpvert.f90
src/main/: config.py  driver.py  fetch.py  parser.py  types.py
src/tools/: cams_clim.py  eot.py  ifs.py  ndlut.py  stack.py
tests/: test_driver.py  test_interp2d.py  test_interpvert.py
