[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecradoff"
version = "0.1.0"
description = "Wrapper to run eCRad offline on ECMWF fields"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "xarray",
    "netCDF4"
]

[project.optional-dependencies]
dev = [
    "dask",
    "zarr"
]

[tool.setuptools]
packages = ["src"]
